[OA][OPS-5763] Font size & spacing seems unusually small fixed (#564)
* [OA][OPS-5763] Font size & spacing seems unusually small fixed


* [OA][OPS-5763] Font size & spacing seems unusually small fixed

--- a/public/css/self-service-time-to-pay.css
+++ b/public/css/self-service-time-to-pay.css
@@ -514,3 +514,11 @@ details summary:focus,
 .no-details details summary .arrow-closed {
     display:none;
 }
+
+.font-xsmall-normal {
+    font-size: 19px;
+}
+
+.margin-top-30 details {
+    margin-bottom:20px;
+}
